--- a/.github/workflows/refresh-leaderboard.yaml
+++ b/.github/workflows/refresh-leaderboard.yaml
@@ -19,6 +19,7 @@ jobs:
 
       - name: commit changes
         run: |
+          git pull origin
           git config user.name gh-actions
           git config user.email gh-actions@github
           git commit -am "Update data.js"
