--- a/.github/workflows/refresh-leaderboard.yaml
+++ b/.github/workflows/refresh-leaderboard.yaml
@@ -23,5 +23,5 @@ jobs:
           git pull origin main --verbose
           git config user.name gh-actions
           git config user.email gh-actions@github
-          git commit -am "Update data.js"
+          git commit -am "Update data.js" || true
           git push origin main
