--- a/.github/workflows/refresh-leaderboard.yaml
+++ b/.github/workflows/refresh-leaderboard.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: commit changes
         run: |
-          git pull origin main --verbose
+          git pull origin main --verbose --ff-only
           git config user.name gh-actions
           git config user.email gh-actions@github
           git commit -am "Update data.js" || true
